seems to be working

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-#elden-ring-banner {
+#ora-parlo-io-banner {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -7,18 +7,19 @@
     z-index: 999999;
     transition: all 0.5s ease-out;
     pointer-events: none;
-    width: 100vw;              
+    width: 80vw;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#elden-ring-banner.show {
+#ora-parlo-io-banner.show {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
 }
 
-#elden-ring-banner img {
-    width: 100vw;              
-    max-width: 100vw;          
+#ora-parlo-io-banner img {
+    width: 100%;
     height: auto;
     filter: drop-shadow(0 0 10px black);
     display: block;
